--- a/pages/smm.html
+++ b/pages/smm.html
@@ -1,121 +1,152 @@
-<!DOCTYPE html>
-<html lang="en">
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>SMM</title>
+        <link rel="stylesheet" href="../css/smm.css">
+        <link rel="stylesheet" href="../css/adaptiv.css">
+    </head>
+    <body>
+    <header class="header">
+        <a href="../index.html" class="header__logo">
+            <svg width="171" height="48" viewBox="0 0 171 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M58.7657 48H67.1657L33.6 0L21.3943 17.4483L15.0857 7.35567L10.7314 13.5823L28.8 41.8418L12.7543 41.7733L17.3143 35.2046L13.3371 28.9779L4.38857 41.7391H4.35429L0 48H8.4H8.43429H40.4914L25.3371 23.7434L33.6 11.8717L58.7657 48Z" fill="white"/>
+                <path d="M75.0748 21.2571H80.0476C84.4636 21.2571 87.0556 18.4731 87.0556 14.4603C87.0556 10.4283 84.2908 7.62514 79.99 7.62514H75.0748V21.2571ZM78.6076 18.0123V10.8699H80.0668C81.8524 10.8699 83.2348 12.4251 83.2348 14.4603C83.2348 16.4187 81.8716 18.0123 79.798 18.0123H78.6076Z" fill="white"/>
+                <path d="M92.5666 21.2571H96.3298V7.62514H92.5666V21.2571Z" fill="white"/>
+                <path d="M108.955 21.4299C111.067 21.4299 113.198 20.7003 114.427 19.7787V13.4427H108.667V16.3803H110.99V17.6475C110.261 17.9739 109.666 18.0891 108.955 18.0891C106.843 18.0891 105.653 16.4187 105.653 14.4603C105.653 12.1371 107.131 10.8507 108.802 10.8507C110.222 10.8507 111.221 11.5227 111.835 12.1179L114.427 9.94834C113.045 8.29714 110.798 7.41394 108.802 7.41394C104.366 7.41394 101.832 10.5243 101.832 14.4603C101.832 18.9531 105 21.4299 108.955 21.4299Z" fill="white"/>
+                <path d="M120.122 21.2571H123.885V7.62514H120.122V21.2571Z" fill="white"/>
+                <path d="M132.555 21.2571H136.299V10.8699H139.697V7.62514H129.157V10.8699H132.555V21.2571Z" fill="white"/>
+                <path d="M142.438 21.2571H146.258L146.95 19.0491H151.327L152.018 21.2571H155.82L150.886 7.62514H147.391L142.438 21.2571ZM147.89 15.9963L149.119 12.0603H149.158L150.386 15.9963H147.89Z" fill="white"/>
+                <path d="M160.646 21.2571H169.728V18.0123H164.409V7.62514H160.646V21.2571Z" fill="white"/>
+                <path d="M74.0188 40.4571H77.8396L78.5308 38.2491H82.9084L83.5996 40.4571H87.4012L82.4668 26.8251H78.9724L74.0188 40.4571ZM79.4716 35.1963L80.7004 31.2603H80.7388L81.9676 35.1963H79.4716Z" fill="white"/>
+                <path d="M98.1214 40.6299C100.233 40.6299 102.365 39.9003 103.593 38.9787V32.6427H97.8334V35.5803H100.157V36.8475C99.427 37.1739 98.8318 37.2891 98.1214 37.2891C96.0094 37.2891 94.819 35.6187 94.819 33.6603C94.819 31.3371 96.2974 30.0507 97.9678 30.0507C99.3886 30.0507 100.387 30.7227 101.001 31.3179L103.593 29.1483C102.211 27.4971 99.9646 26.6139 97.9678 26.6139C93.5326 26.6139 90.9982 29.7243 90.9982 33.6603C90.9982 38.1531 94.1662 40.6299 98.1214 40.6299Z" fill="white"/>
+                <path d="M109.192 40.4571H118.657V37.2123H112.725V35.2347H117.045V32.1243H112.725V30.0699H118.254V26.8251H109.192V40.4571Z" fill="white"/>
+                <path d="M124.076 40.4571H127.647V32.9883H127.686L132.409 40.4571H135.999V26.8251H132.409V34.5243L132.37 34.5435L127.551 26.8251H124.076V40.4571Z" fill="white"/>
+                <path d="M148.548 40.6491C150.967 40.6491 152.925 39.4971 154.096 38.0571L151.428 35.7531C150.698 36.6363 149.68 37.1355 148.548 37.1355C146.493 37.1355 145.264 35.5227 145.264 33.6603C145.264 31.3563 146.858 30.1275 148.548 30.1275C149.815 30.1275 150.852 30.8955 151.428 31.5483L154.096 29.2635C152.56 27.4011 150.41 26.6139 148.548 26.6139C143.997 26.6139 141.424 29.7435 141.424 33.6603C141.424 38.2107 144.516 40.6491 148.548 40.6491Z" fill="white"/>
+                <path d="M162.526 40.4571H166.251V34.5627L170.667 26.8251H166.443L164.427 30.9723H164.389L162.315 26.8251H158.13L162.526 34.5627V40.4571Z" fill="white"/>
+            </svg>
+        </a>
+        <div class="header__controls-mobile">
+            <a href="#" class="button">Свяжитесь с нами</a>
+            <a href="#" class="button button_auto">LV</a>
+        </div>
+        <input class="burger__input" id="burger" type="checkbox" />
+        <label for="burger" class="burger">
+            <i></i>
+            <i></i>
+            <i></i>
+        </label>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/smm.css">
-    <title>SMM</title>
-</head>
+        <div class="header__controls">
+            <ul class="menu">
+                <li class="menu__item"><a href="../index.html" class="menu__link">Главная </a></li>
+                <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
+                <li class="menu__item"><a href="#" class="menu__link menu__link_active">Google Awards</a></li>
+                <li class="menu__item"><a href="../pages/smm.html" class="menu__link">SMM</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">SEO</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+            </ul>
+            <a href="#" class="button">Свяжитесь с нами</a>
+            <a href="#" class="button button_auto">LV</a>
+        </div>
+    </header>
+    <section class="first-screen">
+        <div class="first-screen__container">
+            <h1 class="title-h1">Продвижение в <span>Facebook и Instagram <br> для сферы услуг</span></h1>
+            <p class="txt">От ведения страниц до таргетированной рекламы</p>
+        </div>
+    </section>
 
-<body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="nav_logo"><img src="../img/logo.png" alt="logos"></div>
-            <div class="nav_menu">
-                <nav>
-                    <ul class="list_menu">
-                        <li><a class="item_menu" href="../index.html">Главная</a></li>
-                        <li><a class="item_menu" href="#">О нас</a></li>
-                        <li><a class="item_menu" href="#">Google Awards</a></li>
-                        <li><a class="item_menu active" href="#">SMM</a></li>
-                        <li><a class="item_menu" href="#">SEO</a></li>
-                        <li><a class="item_menu" href="#">Контакты</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="nav_contacts">
-                <a href="#" class="btn_contact">Свяжитесь с нами</a>
-                <a href="#" class="lang">LV</a>
-            </div>
-            <div class="desc">
-                <h1>Продвижение в <br> Facebook и Instagram для сферы услуг</h1>
-                <p>От ведения страниц до таргетированной рекламы</p>
-            </div>
-        </header>
-
-        <main>
-            <section class="s1">
-                <div class="row">
-                    <div class="col">
-                        <img class="st_logo" src="../img/smm/stat.png" alt="stst">
-                    </div>
-                    <div class="col">
-                        <p class="desc_title">Ведение социальных сетей. Что мы предлагаем?</p>
-                        <p class="desc_text_one">
-                            Чтобы всё было прозрачно с самого начала Вашего сотрудничества с нами, и Вы понимали какой объём работы будет выполнен для достижения поставленных целей <span class="bold_p"> – мы составим понятный контент-план на месяц.</span>
-                        </p>
-                        <div class="about_text">
-                            <img class="fb_logo" src="../img/smm/fbin_logo.png" alt="fblogo">
-                            <p class="desc_text">С помощью данного инструмента, мы вместе разработаем индивидуальную стратегию продвижения Вашей компании в социальных сетях Facebook и Instagram.</p>
+    <main>
+        
+        <section class="statistick">
+            <div class="statistick__content">
+                <div class="columns">
+                    <div class="columns__container">
+                        <div class="columns__item item">
+                            <div class="statistick__image">
+                                <img src="../img/smm/stat.png" alt="stat">
+                            </div>
                         </div>
-
-
+                        <div class="columns__item item">
+                            <div class="statistick__title">
+                                <h3>Ведение социальных сетей. Что мы предлагаем?</h3>
+                            </div>
+                            <div class="statistick__details">
+                                <h4>Чтобы всё было прозрачно с самого начала Вашего сотрудничества с нами, и Вы понимали какой объём работы будет выполнен для достижения поставленных целей – <span> мы составим понятный контент-план на месяц.</span></h4>
+                            </div>
+                            <div class="social">
+                                <div class="social__icon"><img src="../img/smm/fbin_logo.png" alt="fb">
+                                </div>
+                                <div class="social__text">
+                                    <h4>С помощью данного инструмента, мы вместе разработаем индивидуальную стратегию продвижения Вашей компании в социальных сетях Facebook и Instagram.</h4>
+                                </div>
+                            </div>
+                            
+                        </div>
                     </div>
-
-
                 </div>
-
-            </section>
-            <div class="container">
-                <h2 class="tabl_desc">Пример контент-плана на месяц</h2>
-                <p class="tabl_text">Данный пример части контент-плана был разработан и реализован <br> для рижской кальянной Hookah Place Riga.</p>
-                <table>
-                    <tr>
-                        <th>День недели</th>
-                        <th>Место размещения</th>
-                        <th>Тип <br> сообщения</th>
-                        <th>Тип контента</th>
-                        <th>Набросок <br> публикации</th>
-                    </tr>
-
-                    <tr class="grey_bc">
-                        <td>01.08.2020</td>
-                        <td>Пост в ленте</td>
-                        <td><span class="sp_b">Продающий</span> <br> Информация о товарах, услугах</td>
-                        <td><a href="#">Фото</a></td>
-                        <td>Как не утонуть в выборе табака и кальянов в нашем <br> шоу-руме? В Hookah Place Riga доброжелательные <br> мастера кальянного ремесла не только подскажут, что <br> выбрать, но и расскажут, как правильно приготовить <br> кальян.
-                            Всегда ждем вас в гости.</td>
-                    </tr>
-                    <tr>
-                        <td>02.08.2020</td>
-                        <td>Пост в ленте</td>
-                        <td><span class="sp_b">Репутационный</span> <br> Репортаж из офиса</td>
-                        <td><a href="#">Видео</a></td>
-                        <td>Кальянщик будет курить и рассказывать.</td>
-                    </tr>
-                    <tr class="grey_bc">
-                        <td>03.08.2020</td>
-                        <td>Пост в ленте</td>
-                        <td><span class="sp_b">Развлекательный</span> <br> Юмор</td>
-                        <td><a href="#">Фото</a></td>
-                        <td>Когда кальян всегда под рукой.</td>
-                    </tr>
-                    <tr>
-                        <td>04.08.2020</td>
-                        <td>Пост в ленте</td>
-                        <td><span class="sp_b">Образовательный</span> <br> Советы, рекомендации</td>
-                        <td><a href="#">Фото</a></td>
-                        <td>Чаша для кальяна – самый важный и главный аксессуар. Именно в правильно подобранной чаше табак раскроется так, как задумал производитель. Да и курить на эстетически красивой чаше всегда приятно. Наши мастера всегда подскажут и
-                            подберут чашу от лучших производителей, чтобы вы сполна насладились вкусами табака.</td>
-                    </tr>
-                    <tr class="grey_bc">
-                        <td>06.08.2020</td>
-                        <td>Пост в ленте</td>
-                        <td><span class="sp_b">Репутационный</span> <br> Процесс производства</td>
-                        <td><a href="#">Видео</a></td>
-                        <td>MIX дня (кальянный табак)</td>
-                    </tr>
-
-                </table>
             </div>
-            </section>
+        </section>
+
+        <section class="table_form">
+            <div class="table-title">
+                <h2 class="tabl_desc">Пример контент-плана на месяц<h2>
+                <p class="tabl_text">Данный пример части контент-плана был разработан и реализован <br> для рижской кальянной Hookah Place Riga.</p>
+            </div>
+            <div class="table_card">
+                    <table>
+                        <tr>
+                            <th>День недели</th>
+                            <th>Место размещения</th>
+                            <th>Тип <br> сообщения</th>
+                            <th>Тип контента</th>
+                            <th>Набросок <br> публикации</th>
+                        </tr>
+
+                        <tr class="grey_bc">
+                            <td>01.08.2020</td>
+                            <td>Пост в ленте</td>
+                            <td><span class="sp_b">Продающий</span> <br> Информация о товарах, услугах</td>
+                            <td><a href="#">Фото</a></td>
+                            <td>Как не утонуть в выборе табака и кальянов в нашем <br> шоу-руме? В Hookah Place Riga доброжелательные <br> мастера кальянного ремесла не только подскажут, что <br> выбрать, но и расскажут, как правильно приготовить <br> кальян.
+                                Всегда ждем вас в гости.</td>
+                        </tr>
+                        <tr>
+                            <td>02.08.2020</td>
+                            <td>Пост в ленте</td>
+                            <td><span class="sp_b">Репутационный</span> <br> Репортаж из офиса</td>
+                            <td><a href="#">Видео</a></td>
+                            <td>Кальянщик будет курить и рассказывать.</td>
+                        </tr>
+                        <tr class="grey_bc">
+                            <td>03.08.2020</td>
+                            <td>Пост в ленте</td>
+                            <td><span class="sp_b">Развлекательный</span> <br> Юмор</td>
+                            <td><a href="#">Фото</a></td>
+                            <td>Когда кальян всегда под рукой.</td>
+                        </tr>
+                        <tr>
+                            <td>04.08.2020</td>
+                            <td>Пост в ленте</td>
+                            <td><span class="sp_b">Образовательный</span> <br> Советы, рекомендации</td>
+                            <td><a href="#">Фото</a></td>
+                            <td>Чаша для кальяна – самый важный и главный аксессуар. Именно в правильно подобранной чаше табак раскроется так, как задумал производитель. Да и курить на эстетически красивой чаше всегда приятно. Наши мастера всегда подскажут и
+                                подберут чашу от лучших производителей, чтобы вы сполна насладились вкусами табака.</td>
+                        </tr>
+                        <tr class="grey_bc">
+                            <td>06.08.2020</td>
+                            <td>Пост в ленте</td>
+                            <td><span class="sp_b">Репутационный</span> <br> Процесс производства</td>
+                            <td><a href="#">Видео</a></td>
+                            <td>MIX дня (кальянный табак)</td>
+                        </tr>
+                    </table>
+                </div>
+        </section>
+
+    </main>
 
 
-        </main>
-
-    </div>
-</body>
-
-</html>
+    </body>
+    </html>
